<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPhotographerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:fontFamily="cursive"
        android:paddingTop="25dp"
        android:text="@string/photographer_login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/holo_purple"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPhotographerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etPhotographerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enter_your_passwrod"
        android:inputType="textPassword"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnPhotographerLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="25dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingTop="20dp"
        android:text="New User..?Click Here"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorPrimaryDark" />


</LinearLayout>